--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "fourStudents",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@rails/webpacker": "^4.2.2",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1"
+  },
   "devDependencies": {
     "webpack": "^4.42.0",
     "webpack-dev-server": "^3.10.3"
